modificaciones especificas de windows